--- a/ijunior.csproj
+++ b/ijunior.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>ijunior.Homework7</StartupObject>
+    <StartupObject>ijunior.Block2.Homework1</StartupObject>
   </PropertyGroup>
 
 </Project>
