--- a/ijunior.csproj
+++ b/ijunior.csproj
@@ -5,11 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>ijunior.Block5.Homework4</StartupObject>
+    <StartupObject>ijunior.OOP.Homework1.Program</StartupObject>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="OOP\" />
-  </ItemGroup>
 
 </Project>
